--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
             };
 
             try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/register', {
+                const response = await fetch('https://api.v1.buyingsignal.io/workflow/n5ik4uwJCaAkBLgQ', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
