--- a/register.html
+++ b/register.html
@@ -71,7 +71,7 @@
             };
 
             try {
-                const response = await fetch('https://api.v1.buyingsignal.io/webhook/9fbaee4a-0ce3-4385-b511-c7dd5088b885', {
+                const response = await fetch('https://api.mixed-marketing-actions.ovh/register', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
