--- a/login.html
+++ b/login.html
@@ -2,9 +2,11 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Login - Profile to Airtable</title>
+    <title>Extract Profiles to Airtable - Chrome Extension</title>
     <meta content="width=device-width, initial-scale=1" name="viewport">
     <link href="./Extract Profiles to Airtable_files/chrome-extension-prop2.webflow.b67937007.css" rel="stylesheet" type="text/css">
+    <link href="./Extract Profiles to Airtable_files/666b4ed93e72317ff3029989_Direct to Airtable.png" rel="shortcut icon" type="image/x-icon">
+    <link href="./Extract Profiles to Airtable_files/666b4ed93e72317ff3029989_Direct to Airtable.png" rel="apple-touch-icon">
     <style>
         .auth-container {
             max-width: 400px;
