--- a/login.html
+++ b/login.html
@@ -94,6 +94,7 @@
                     console.log('Login successful, storing tokens...');
                     localStorage.setItem('token', data.token);
                     localStorage.setItem('apiKey', data.x_api_key);
+                    localStorage.setItem('userEmail', data.user.email);
                     console.log('Tokens stored, redirecting to dashboard...');
                     window.location.href = 'api-keys.html';
                 } else {
