--- a/api-keys.html
+++ b/api-keys.html
@@ -158,8 +158,43 @@
     </style>
     <script>
         // Check if user is logged in
-        document.addEventListener('DOMContentLoaded', function() {
-            if (!localStorage.getItem('apiKey') || !localStorage.getItem('userEmail') || !localStorage.getItem('token')) {
+        document.addEventListener('DOMContentLoaded', async function() {
+            const userEmail = localStorage.getItem('userEmail');
+            const token = localStorage.getItem('token');
+            const apiKey = localStorage.getItem('apiKey');
+
+            if (!apiKey || !userEmail || !token) {
+                window.location.href = 'login.html';
+                return;
+            }
+
+            try {
+                const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
+                    method: 'POST',
+                    headers: {
+                        'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44',
+                        'Content-Type': 'application/json'
+                    },
+                    body: JSON.stringify({
+                        user: {
+                            email: userEmail
+                        },
+                        token: token
+                    })
+                });
+
+                if (!response.ok) {
+                    // If response is not 200, redirect to login
+                    window.location.href = 'login.html';
+                    return;
+                }
+
+                const data = await response.json();
+                if (!data.verified) {
+                    window.location.href = 'login.html';
+                }
+            } catch (error) {
+                console.error('Error verifying user:', error);
                 window.location.href = 'login.html';
             }
         });
