--- a/api-keys.html
+++ b/api-keys.html
@@ -311,7 +311,7 @@
 
             <div class="alert">
                 You don't have an active subscription. 
-                <a href="#">Go to /app/ozeo/settings/subscription</a>
+                <a href="https://buy.stripe.com/bIY9Cr6gV7HpdDa6oA" target="_blank">Purchase a subscription</a>
             </div>
 
             <table class="api-keys-table">
