--- a/api-keys.html
+++ b/api-keys.html
@@ -155,6 +155,36 @@
         .logout-btn:hover {
             background-color: rgba(255, 255, 255, 0.1);
         }
+
+        /* Add these new styles */
+        .billing-portal-block {
+            margin-top: 20px;
+            background: white;
+            border-radius: 8px;
+            padding: 20px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+            box-shadow: 0 1px 3px rgba(0,0,0,0.1);
+        }
+
+        .billing-portal-block:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+            background-color: #f8f9fa;
+        }
+
+        .portal-content {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 10px;
+            color: #132134;
+        }
+
+        .portal-icon {
+            width: 24px;
+            height: 24px;
+        }
     </style>
     <script>
         // Check if user is logged in
@@ -328,6 +358,16 @@
                     <!-- Data will be dynamically inserted here -->
                 </tbody>
             </table>
+
+            <!-- Add the new billing portal block -->
+            <div class="billing-portal-block" onclick="window.open('https://billing.stripe.com/p/login/dR66pB8ut1sveZicMM', '_blank')">
+                <div class="portal-content">
+                    <svg class="portal-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10 6H6C4.89543 6 4 6.89543 4 8V18C4 19.1046 4.89543 20 6 20H16C17.1046 20 18 19.1046 18 18V14M14 4H20M20 4V10M20 4L10 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+                    <span>Open Billing Portal</span>
+                </div>
+            </div>
         </div>
     </div>
 </body>
