--- a/api-keys.html
+++ b/api-keys.html
@@ -209,7 +209,8 @@
                         user: {
                             email: userEmail
                         },
-                        token: token
+                        token: token,
+                        service_id: '21647ac6-b6a1-4431-a7b6-dd603ed587e3'
                     })
                 });
 
@@ -251,6 +252,7 @@
                         email: userEmail
                     },
                     token: token,
+                    service: '21647ac6-b6a1-4431-a7b6-dd603ed587e3',
                     sqlQuery: "SELECT users.*, credits.* FROM users JOIN credits ON users.id = credits.user_id WHERE users.email = $1;",
                     parameters: [userEmail]
                 };
@@ -360,7 +362,7 @@
             </table>
 
             <!-- Add the new billing portal block -->
-            <div class="billing-portal-block" onclick="window.open('https://billing.stripe.com/p/login/dR66pB8ut1sveZicMM', '_blank')">
+            <div class="billing-portal-block" onclick="handleBillingPortal()">
                 <div class="portal-content">
                     <svg class="portal-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10 6H6C4.89543 6 4 6.89543 4 8V18C4 19.1046 4.89543 20 6 20H16C17.1046 20 18 19.1046 18 18V14M14 4H20M20 4V10M20 4L10 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
