--- a/api-keys.html
+++ b/api-keys.html
@@ -342,7 +342,14 @@
 
             <div class="alert">
                 You don't have an active subscription. 
-                <a href="https://buy.stripe.com/bIY9Cr6gV7HpdDa6oA?prefilled_email=${encodeURIComponent(localStorage.getItem('userEmail'))}" target="_blank">Purchase a subscription</a>
+                <a href="#" onclick="handlePurchaseClick()" target="_blank">Purchase a subscription</a>
+                <script>
+                    function handlePurchaseClick() {
+                        const email = localStorage.getItem('userEmail');
+                        const url = `https://buy.stripe.com/bIY9Cr6gV7HpdDa6oA?prefilled_email=${encodeURIComponent(email)}`;
+                        window.open(url, '_blank');
+                    }
+                </script>
             </div>
 
             <table class="api-keys-table">
@@ -362,7 +369,7 @@
             </table>
 
             <!-- Add the new billing portal block -->
-            <div class="billing-portal-block" onclick="handleBillingPortal()">
+            <div class="billing-portal-block" onclick="window.open('https://billing.stripe.com/p/login/dR66pB8ut1sveZicMM', '_blank')">
                 <div class="portal-content">
                     <svg class="portal-icon" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10 6H6C4.89543 6 4 6.89543 4 8V18C4 19.1046 4.89543 20 6 20H16C17.1046 20 18 19.1046 18 18V14M14 4H20M20 4V10M20 4L10 14" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
