--- a/api-keys.html
+++ b/api-keys.html
@@ -254,7 +254,7 @@
                     token: token,
                     service: '21647ac6-b6a1-4431-a7b6-dd603ed587e3',
                     sqlQuery: "SELECT users.*, credits.* FROM users JOIN credits ON users.id = credits.user_id WHERE users.email = $1 and users.service_id = $2;",
-                    parameters: [userEmail]
+                    parameters: []
                 };
 
                 const response = await fetch('https://api.mixed-marketing-actions.ovh/query', {
@@ -267,6 +267,7 @@
                 });
 
                 const result = await response.json();
+                console.log('API Response:', result);
                 
                 if (result.success && result.data.length > 0) {
                     updateTable(result.data);
