--- a/destinations.html
+++ b/destinations.html
@@ -293,7 +293,7 @@
                 <h2>Choose Your Data Destination</h2>
                 <select id="destinationSelect" class="destination-select" onchange="handleDestinationChange(this)">
                     <option value="excel">Excel Download</option>
-                    <option value="airtable">Airtable</option>
+                    <option value="airtable">Airtable (coming soon)</option>
                 </select>
 
                 <div class="connection-status"></div>
