--- a/destinations.html
+++ b/destinations.html
@@ -349,7 +349,7 @@
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
-                        'Accept': 'application/json',
+                        'Accept': '*/*',
                         'Origin': window.location.origin
                     },
                     mode: 'cors',
