--- a/destinations.html
+++ b/destinations.html
@@ -328,12 +328,6 @@
             }
 
             try {
-                console.log('Sending auth request with:', {
-                    email: userEmail,
-                    hasToken: !!token,
-                    airtableTokenLength: airtableToken.length
-                });
-
                 const requestBody = {
                     user: {
                         email: userEmail
@@ -343,7 +337,15 @@
                     airtable_token: airtableToken
                 };
 
-                console.log('Request body:', requestBody);
+                // Generate and log cURL command
+                const curlCommand = `curl -X POST \\
+  'https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/auth' \\
+  -H 'Content-Type: application/json' \\
+  -H 'Accept: */*' \\
+  -H 'Origin: ${window.location.origin}' \\
+  -d '${JSON.stringify(requestBody, null, 2)}'`;
+
+                console.log('Equivalent cURL command:', curlCommand);
 
                 const response = await fetch('https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/auth', {
                     method: 'POST',
