--- a/destinations.html
+++ b/destinations.html
@@ -343,6 +343,7 @@
   -H 'Content-Type: application/json' \\
   -H 'Accept: */*' \\
   -H 'Origin: ${window.location.origin}' \\
+  -H 'x-api-key: mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44' \\
   -d '${JSON.stringify(requestBody, null, 2)}'`;
 
                 console.log('Equivalent cURL command:', curlCommand);
@@ -352,7 +353,8 @@
                     headers: {
                         'Content-Type': 'application/json',
                         'Accept': '*/*',
-                        'Origin': window.location.origin
+                        'Origin': window.location.origin,
+                        'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44'
                     },
                     mode: 'cors',
                     body: JSON.stringify(requestBody)
