--- a/destinations.html
+++ b/destinations.html
@@ -346,7 +346,7 @@
 
                 console.log('Equivalent cURL command:', curlCommand);
 
-                const response = await fetch('https://api.v1.buyingsignal.io/webhook/97d61790-070e-4417-aea6-0f39d537e5a6', {
+                const response = await fetch('https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/auth', {
                     method: 'POST',
                     headers: {
                         'Content-Type': 'application/json',
