--- a/destinations.html
+++ b/destinations.html
@@ -349,8 +349,7 @@
                 const response = await fetch('https://api.mixed-marketing-actions.ovh/action/linkedin_to_airtable/auth', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json',
-                        'Accept': '*/*'
+                        'Content-Type': 'application/json'
                     },
                     body: JSON.stringify(requestBody)
                 });
