--- a/destinations.html
+++ b/destinations.html
@@ -263,7 +263,7 @@
         }
     </style>
     <script>
-        // Check if user is logged in (reuse from api-keys.html)
+        // Check if user is logged in and verify
         document.addEventListener('DOMContentLoaded', async function() {
             const userEmail = localStorage.getItem('userEmail');
             const token = localStorage.getItem('token');
@@ -274,7 +274,6 @@
                 return;
             }
 
-            // Verify user
             try {
                 const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
                     method: 'POST',
@@ -300,50 +299,11 @@
                 if (!data.verified) {
                     window.location.href = 'login.html';
                 }
-
-                // If verification successful, fetch user's destination
-                await fetchUserDestination();
             } catch (error) {
                 console.error('Error verifying user:', error);
                 window.location.href = 'login.html';
             }
         });
-
-        async function fetchUserDestination() {
-            const userEmail = localStorage.getItem('userEmail');
-            const token = localStorage.getItem('token');
-
-            try {
-                const response = await fetch('https://api.mixed-marketing-actions.ovh/query', {
-                    method: 'POST',
-                    headers: {
-                        'Content-Type': 'application/json',
-                        'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44'
-                    },
-                    body: JSON.stringify({
-                        user: {
-                            email: userEmail
-                        },
-                        service_id: '21647ac6-b6a1-4431-a7b6-dd603ed587e3',
-                        token: token,
-                        sqlQuery: "SELECT users.option FROM users WHERE users.email = $1 AND users.service_id = $2;",
-                        parameters: []
-                    })
-                });
-
-                const result = await response.json();
-                console.log('Destination Response:', result);
-
-                if (result.success && result.data.length > 0) {
-                    const userOption = result.data[0].option;
-                    const select = document.getElementById('destinationSelect');
-                    select.value = userOption || 'excel';
-                    handleDestinationChange(select);
-                }
-            } catch (error) {
-                console.error('Error fetching user destination:', error);
-            }
-        }
 
         function handleDestinationChange(select) {
             console.log('Destination changed to:', select.value);
