--- a/destinations.html
+++ b/destinations.html
@@ -333,8 +333,9 @@
                 const response = await fetch('https://api.mixed-marketing-actions.ovh/verify', {
                     method: 'POST',
                     headers: {
-                        'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44',
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'Accept': '*/*',
+                        'x-api-key': apiKey
                     },
                     body: JSON.stringify({
                         user: {
