--- a/destinations.html
+++ b/destinations.html
@@ -335,7 +335,7 @@
                     headers: {
                         'Content-Type': 'application/json',
                         'Accept': '*/*',
-                        'x-api-key': apiKey
+                        'x-api-key': 'mV3xihTh7m9ypwEAvrsxmWDwghb52jD5nQfotH44'
                     },
                     body: JSON.stringify({
                         user: {
